// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Db query member tests getMember should return member data for a valid email address 1`] = `
{
  "billingId": "BILL001",
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": "admin",
  "dateOfBirth": Any<String>,
  "email": "matti.virtanen@example.com",
  "emailVerifiedAt": undefined,
  "firstName": "Matti",
  "iceContactName": "Liisa Virtanen",
  "iceContactPhoneNumber": "0407654321",
  "isTrainingProgramPilot": false,
  "lastName": "Virtanen",
  "memberId": 1,
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "phoneNumber": "0401234567",
  "postcode": "00100",
  "roles": [
    "USER",
    "INSTRUCTOR",
  ],
  "streetAddress": "Keskuskatu 1",
  "townCity": "Helsinki",
  "updatedAt": Any<String>,
  "updatedBy": "admin",
}
`;

exports[`Db query member tests getMemberById should return member data for a valid id 1`] = `
{
  "billingId": "BILL001",
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": "admin",
  "dateOfBirth": "1980-01-15",
  "email": "matti.virtanen@example.com",
  "emailVerifiedAt": undefined,
  "firstName": "Matti",
  "iceContactName": "Liisa Virtanen",
  "iceContactPhoneNumber": "0407654321",
  "isTrainingProgramPilot": false,
  "lastName": "Virtanen",
  "memberId": 1,
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "phoneNumber": "0401234567",
  "postcode": "00100",
  "roles": [
    "USER",
    "INSTRUCTOR",
  ],
  "streetAddress": "Keskuskatu 1",
  "townCity": "Helsinki",
  "updatedAt": Any<String>,
  "updatedBy": "admin",
}
`;

exports[`Db query member tests getMemberRoles should return roles for given valid member 1`] = `
[
  "USER",
  "INSTRUCTOR",
]
`;

exports[`Db query member tests getMembers should return members 1`] = `
[
  {
    "memberId": 7,
    "name": "Antti Heikkinen",
    "phoneNumber": "0467890123",
  },
  {
    "memberId": 5,
    "name": "Pekka Hämäläinen",
    "phoneNumber": "0445678901",
  },
  {
    "memberId": 2,
    "name": "Liisa Korhonen",
    "phoneNumber": "0412345678",
  },
  {
    "memberId": 8,
    "name": "Sanna Koskinen",
    "phoneNumber": "0478901234",
  },
  {
    "memberId": 6,
    "name": "Kaisa Laine",
    "phoneNumber": "0456789012",
  },
  {
    "memberId": 4,
    "name": "Anna Mäkinen",
    "phoneNumber": "0434567890",
  },
  {
    "memberId": 3,
    "name": "Jukka Nieminen",
    "phoneNumber": "0423456789",
  },
  {
    "memberId": 10,
    "name": "Marja Salminen",
    "phoneNumber": "0490123456",
  },
  {
    "memberId": 9,
    "name": "Juha Seppälä",
    "phoneNumber": "0489012345",
  },
  {
    "memberId": 1,
    "name": "Matti Virtanen",
    "phoneNumber": "0401234567",
  },
]
`;